--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
 html,
-body {
+body,
+#__next {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  max-width: -webkit-fill-available;
+  max-height: -webkit-fill-available;
+  background-color: #f2f2f2;
 }
 
 a {
@@ -13,4 +20,5 @@ a {
 
 * {
   box-sizing: border-box;
+  position: relative;
 }
