--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,30 @@ a {
   box-sizing: border-box;
   position: relative;
 }
+
+.conatiner-filled {
+  width: 100%;
+  height: 100%;
+}
+
+.flex-centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.bottom-fixed {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
