feat: add ButtonDenseGroup, Icon

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -25,3 +25,10 @@
   align-items: center;
   justify-content: space-around;
 }
+
+.ButtonDenseGroup {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+}
