--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -4,8 +4,10 @@
   width: 50px;
   height: 50px;
   border-radius: 5px;
-  padding: 5px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Button:hover {
