--- a/components/game/Route/Route.module.css
+++ b/components/game/Route/Route.module.css
@@ -1,6 +1,13 @@
 .DrawingRoute {
   animation-name: draw-line;
-  animation-duration: 0.1s;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+.ErasedRoute {
+  animation-name: erase-line;
+  animation-duration: 0.5s;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 }
@@ -16,5 +23,29 @@
 @keyframes draw-line {
   to {
     stroke-dashoffset: 0;
+  }
+}
+
+@keyframes erase-line {
+  12% {
+    opacity: 0;
+  }
+
+  36% {
+    opacity: 1;
+  }
+
+  48% {
+    opacity: 0;
+  }
+
+  72% {
+    stroke: #ddd;
+    opacity: 1;
+  }
+
+  100% {
+    stroke: #ddd;
+    opacity: 0;
   }
 }
